--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.3.2",
     "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
@@ -22,11 +23,13 @@
     "react-helmet-async": "^2.0.1",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.20.0",
     "react-simple-captcha": "^9.3.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.10.1"
+    "sweetalert2": "^11.10.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
