--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.20.0",
     "react-simple-captcha": "^9.3.0",
     "react-toastify": "^9.1.3",
+    "react-ts-typewriter": "^0.1.8-b",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
